--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,48 @@
-ul {
+@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
+
+.cards {
   display: flex;
   flex-wrap: wrap;
+  font-family: 'Goudy Bookletter 1911', serif;
 }
 
-li {
-  list-style: none;
-  height: 150px;
-  width: 150px;
-}
+  .card {
+    position: relative;
+    border: 4px solid #533332;
+    border-radius: 2px;
+    list-style: none;
+    height: auto;
+    width: 200px;
+    margin: 16px;
+    overflow: hidden;
+    padding: 5px;  
+    text-align: center;
+    background-color: #FBE5BE;
 
-img {
+    &:nth-child(even) {
+      .card__page-number {
+        color: red;
+      }    
+    }
+  }
 
-}
+  .card__title {
+    text-align: left;
+
+    &::first-letter {
+      color: red;
+      font-size: 48px;
+      text-transform: capitalize;
+      padding-right: 4px;
+    }
+  }
+
+  .card__img {
+    border-radius: 20px;
+  }
+
+  .card__page-number {
+    position: relative;
+    bottom: 0
+  }
+
