--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,14 @@
     }
   }
 
+  .card__link {
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #533332;
+  }
+
   .card__title {
     text-align: left;
 
