--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
+@import 'style/modal';
 
 .cards {
   display: flex;
@@ -21,7 +22,8 @@
 
     &:nth-child(even) {
       .card__page-number {
-        color: red;
+        left: 6px;
+        right: initial;
       }    
     }
   }
@@ -50,7 +52,8 @@
   }
 
   .card__page-number {
-    position: relative;
-    bottom: 0
+    position: absolute;
+    bottom: 0;
+    right: 6px;
+    font-weight: 700;
   }
-
