--- a/src/App.scss
+++ b/src/App.scss
@@ -5,58 +5,66 @@
   font-family: 'Goudy Bookletter 1911', serif;
 }
 
-.cards {
-  display: flex;
-  flex-wrap: wrap;
+body {
+  text-align: center;
 }
 
-  .card {
-    position: relative;
-    border: 4px solid $colour-secondary;
-    border-radius: 2px;
-    list-style: none;
-    height: auto;
-    width: 200px;
-    margin: 16px;
-    overflow: hidden;
-    padding: 5px;  
-    text-align: center;
-    background-color: $colour-primary;
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: center;
+  }
 
-    &:nth-child(even) {
-      .card__page-number {
-        left: 6px;
-        right: initial;
-      }    
+    .card {
+      position: relative;
+      border: 4px solid $colour-secondary;
+      border-radius: 2px;
+      list-style: none;
+      height: auto;
+      width: 200px;
+      margin: 16px;
+      overflow: hidden;
+      padding: 5px;  
+      text-align: center;
+      background-color: $colour-primary;
+
+      &:nth-child(even) {
+        .card__page-number {
+          left: 6px;
+          right: initial;
+        }    
+      }
     }
-  }
 
-  .card__link {
-    text-decoration: none;
-    display: block;
-    width: 100%;
-    height: 100%;
-    color: $colour-secondary;
-  }
-
-  .card__title {
-    text-align: left;
-
-    &::first-letter {
-      color: red;
-      font-size: 48px;
-      text-transform: capitalize;
-      padding-right: 4px;
+    .card__link {
+      text-decoration: none;
+      display: block;
+      width: 100%;
+      height: 100%;
+      color: $colour-secondary;
     }
-  }
 
-  .card__img {
-    border-radius: 20px;
-  }
+    .card__title {
+      text-align: left;
 
-  .card__page-number {
-    position: absolute;
-    bottom: 0;
-    right: 6px;
-    font-weight: 700;
-  }
+      &::first-letter {
+        color: red;
+        font-size: 48px;
+        text-transform: capitalize;
+        padding-right: 4px;
+        vertical-align: bottom;
+        line-height: 1em;
+      }
+    }
+
+    .card__img {
+      border-radius: 20px;
+    }
+
+    .card__page-number {
+      position: absolute;
+      bottom: 0;
+      right: 6px;
+      font-weight: 700;
+    }
