--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,11 @@ body {
       padding: 5px;  
       text-align: center;
       background-color: $colour-primary;
+      transition: background-color .4s;
+
+      &:hover {
+        background-color: #F9EA72;
+      }
 
       &:nth-child(even) {
         .card__page-number {
